feat: simplify CI to use GitHub Packages
- Updated dependencies to use @garrick0/* scoped packages
- Added .npmrc for GitHub Packages authentication
- Simplified CI workflow (removed multi-repo checkout)
- Removed old documentation and example workflows

--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
   "author": "garrick0",
   "license": "MIT",
   "dependencies": {
-    "c3-compliance": "^0.1.0",
-    "c3-discovery": "^0.1.0",
-    "c3-parsing": "^0.1.0",
-    "c3-projection": "^0.1.0",
-    "c3-shared": "^0.1.0",
-    "c3-wiring": "^0.1.0",
+    "@garrick0/c3-compliance": "dev",
+    "@garrick0/c3-discovery": "dev",
+    "@garrick0/c3-parsing": "dev",
+    "@garrick0/c3-projection": "dev",
+    "@garrick0/c3-shared": "dev",
+    "@garrick0/c3-wiring": "dev",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
