--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,17 +18,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@garrick0'
 
       - name: Install dependencies
-        run: npm ci
-
-      - name: Type check
-        run: npm run typecheck
-        continue-on-error: true
+        run: npm install
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run tests
         run: npm test
-        continue-on-error: true
 
       - name: Build
         run: npm run build
